--- a/latest/setup/sample-configuration.html
+++ b/latest/setup/sample-configuration.html
@@ -251,6 +251,13 @@ listeners:
 #    client_secret: bar
 #    redirect_uri: https://example.com/bridge_oauth/
 
+#bridgeAuth:
+#  # (Optional) Support for external auth events
+#  enabled: false
+#  enableHttpGet: false
+#  domain: example.com
+#  urlPrefix: https://example.com/bridge_auth/
+
 #generic:
 #  # (Optional) Support for generic webhook events.
 #  #'allowJsTransformationFunctions' will allow users to write short transformation snippets in code, and thus is unsafe in untrusted environments
