--- a/latest/print.html
+++ b/latest/print.html
@@ -534,6 +534,11 @@ listeners:
 #    client_secret: bar
 #    redirect_uri: https://example.com/bridge_oauth/
 
+#mqtt:
+#  # (Optional) Support for MQTT integration
+#  enabled: false
+#  mqttasAddress: http://localhost:8585
+
 #bridgeAuth:
 #  # (Optional) Support for external auth events
 #  enabled: false
@@ -565,7 +570,7 @@ listeners:
 
 #bot:
 #  # (Optional) Define profile information for the bot user
-#  displayname: Hookshot Bot
+#  displayname: Bridge Bot
 #  avatar: mxc://half-shot.uk/2876e89ccade4cb615e210c458e2a7a6883fe17d
 
 #serviceBots:
@@ -973,10 +978,10 @@ decoded.</p>
 <h3 id="get-requests"><a class="header" href="#get-requests">GET requests</a></h3>
 <p>In previous versions of hookshot, it would also handle the <code>GET</code> HTTP method. This was disabled due to concerns that it was too easy for the webhook to be
 inadvertently triggered by URL preview features in clients and servers. If you still need this functionality, you can enable it in the config.</p>
-<p>Hookshot will insert the full content of the body into a key under the Matrix event called <code>uk.half-shot.hookshot.webhook_data</code>, which may be useful if you have
+<p>Hookshot will insert the full content of the body into a key under the Matrix event called <code>gk.bridgeas.hookshot.webhook_data</code>, which may be useful if you have
 other integrations that would like to make use of the raw request body.</p>
 <section class="notice">
-Matrix does NOT support floating point values in JSON, so the <code>uk.half-shot.hookshot.webhook_data</code> field will automatically convert any float values
+Matrix does NOT support floating point values in JSON, so the <code>gk.bridgeas.hookshot.webhook_data</code> field will automatically convert any float values
 to a string representation of that value. This change is <strong>not applied</strong> to the JavaScript transformation <code>data</code>
 variable, so it will contain proper float values.
 </section>
@@ -995,7 +1000,7 @@ in your room to prevent users from tampering with the script.
 you a very powerful ability to generate messages based on whatever input is coming in.</p>
 <p>The input is parsed and executed within a separate JavaScript Virtual Machine context, and is limited to an execution time of 2 seconds.
 With that said, the feature is disabled by default and <code>allowJsTransformationFunctions</code> must be enabled in the config.</p>
-<p>The code snippets can be edited by editing the Matrix state event corresponding to this connection (with a state type of <code>uk.half-shot.matrix-hookshot.generic.hook</code>).
+<p>The code snippets can be edited by editing the Matrix state event corresponding to this connection (with a state type of <code>gk.bridgeas.generic.hook</code>).
 Because this is a fairly advanced feature, this documentation won't go into how to edit state events from your client.
 Please seek out documentation from your client on how to achieve this.</p>
 <p>The script string should be set within the state event under the <code>transformationFunction</code> key.</p>
@@ -1748,6 +1753,7 @@ which help us determine which services are affected by an issue.</li>
 </ul>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="provisioning"><a class="header" href="#provisioning">Provisioning</a></h1>
 <p>This section is not complete yet for end users. For developers, you can read the documentation for the API below:</p>
+<!-- TODO-GK: Adjust this -->
 <h2 id="provisioning-api-for-matrix-hookshot"><a class="header" href="#provisioning-api-for-matrix-hookshot">Provisioning API for matrix-hookshot</a></h2>
 <h1 id="overview"><a class="header" href="#overview">Overview</a></h1>
 <p>This document describes how to integrate with <code>matrix-hookshot</code>'s provisioning API.</p>
@@ -1773,7 +1779,7 @@ Authorization: Bearer secret
 <pre><code class="language-json5">{
     &quot;JiraProject&quot;: {
         &quot;type&quot;: &quot;JiraProject&quot;, // The name of the connection
-        &quot;eventType&quot;: &quot;uk.half-shot.matrix-hookshot.jira.project&quot;, // Corresponds to the state type for the connection
+        &quot;eventType&quot;: &quot;gk.bridgeas.jira.project&quot;, // Corresponds to the state type for the connection
         &quot;service&quot;: &quot;jira&quot;, // or github, webhook. A human-readable service name to make things look pretty
         &quot;botUserId&quot;: &quot;@hookshot:yourdomain.com&quot;, // The bot mxid for the service. Currently, this is the sender_localpart, but may change in the future.
     }
@@ -1784,7 +1790,7 @@ Authorization: Bearer secret
 <h3 id="response-2"><a class="header" href="#response-2">Response</a></h3>
 <pre><code class="language-json5">[{
     &quot;type&quot;: &quot;JiraProject&quot;, // The name of the connection
-    &quot;eventType&quot;: &quot;uk.half-shot.matrix-hookshot.jira.project&quot;, // Corresponds to the state type in the connection
+    &quot;eventType&quot;: &quot;gk.bridgeas.jira.project&quot;, // Corresponds to the state type in the connection
     &quot;id&quot;: &quot;opaque-unique-id&quot;, // An opaque ID used to refer to this connection. Should **NOT** be assumed to be stable.
     &quot;service&quot;: &quot;jira&quot;, // or github, webhook. A human-readable service name to make things look pretty
     &quot;botUserId&quot;: &quot;@hookshot:yourdomain.com&quot;, // The bot mxid for the service. Currently, this is the sender_localpart, but may change in the future.
@@ -1798,7 +1804,7 @@ Authorization: Bearer secret
 <h3 id="response-3"><a class="header" href="#response-3">Response</a></h3>
 <pre><code class="language-json5">{
     &quot;type&quot;: &quot;JiraProject&quot;, // The name of the connection
-    &quot;eventType&quot;: &quot;uk.half-shot.matrix-hookshot.jira.project&quot;, // Corresponds to the state type in the connection
+    &quot;eventType&quot;: &quot;gk.bridgeas.jira.project&quot;, // Corresponds to the state type in the connection
     &quot;id&quot;: &quot;opaque-unique-id&quot;, // An opaque ID used to refer to this connection. Should **NOT** be assumed to be stable.
     &quot;service&quot;: &quot;jira&quot;, // or github, webhook. A human-readable service name to make things look pretty
     &quot;botUserId&quot;: &quot;@hookshot:yourdomain.com&quot;, // The bot mxid for the service. Currently, this is the sender_localpart, but may change in the future.
@@ -1818,7 +1824,7 @@ Authorization: Bearer secret
 <h3 id="response-4"><a class="header" href="#response-4">Response</a></h3>
 <pre><code class="language-json5">{
     &quot;type&quot;: &quot;JiraProject&quot;, // The name of the connection
-    &quot;eventType&quot;: &quot;uk.half-shot.matrix-hookshot.jira.project&quot;, // Corresponds to the state type in the connection
+    &quot;eventType&quot;: &quot;gk.bridgeas.jira.project&quot;, // Corresponds to the state type in the connection
     &quot;id&quot;: &quot;opaque-unique-id&quot;, // An opaque ID used to refer to this connection. Should **NOT** be assumed to be stable.
     &quot;service&quot;: &quot;jira&quot;, // or github, webhook. A human-readable service name to make things look pretty
     &quot;botUserId&quot;: &quot;@hookshot:yourdomain.com&quot;, // The bot mxid for the service. Currently, this is the sender_localpart, but may change in the future.
@@ -1839,7 +1845,7 @@ Authorization: Bearer secret
 <pre><code class="language-json5">{
 
     &quot;type&quot;: &quot;JiraProject&quot;, // The name of the connection
-    &quot;eventType&quot;: &quot;uk.half-shot.matrix-hookshot.jira.project&quot;, // Corresponds to the state type in the connection
+    &quot;eventType&quot;: &quot;gk.bridgeas.jira.project&quot;, // Corresponds to the state type in the connection
     &quot;id&quot;: &quot;opaque-unique-id&quot;, // An opaque ID used to refer to this connection. Should **NOT** be assumed to be stable.
     &quot;service&quot;: &quot;jira&quot;, // or github, webhook. A human-readable service name to make things look pretty
     &quot;botUserId&quot;: &quot;@hookshot:yourdomain.com&quot;, // The bot mxid for the service. Currently, this is the sender_localpart, but may change in the future.
