--- a/latest/setup/sample-configuration.html
+++ b/latest/setup/sample-configuration.html
@@ -251,6 +251,11 @@ listeners:
 #    client_secret: bar
 #    redirect_uri: https://example.com/bridge_oauth/
 
+#mqtt:
+#  # (Optional) Support for MQTT integration
+#  enabled: false
+#  mqttasAddress: http://localhost:8585
+
 #bridgeAuth:
 #  # (Optional) Support for external auth events
 #  enabled: false
@@ -282,7 +287,7 @@ listeners:
 
 #bot:
 #  # (Optional) Define profile information for the bot user
-#  displayname: Hookshot Bot
+#  displayname: Bridge Bot
 #  avatar: mxc://half-shot.uk/2876e89ccade4cb615e210c458e2a7a6883fe17d
 
 #serviceBots:
