--- a/latest/setup/webhooks.html
+++ b/latest/setup/webhooks.html
@@ -217,10 +217,10 @@ decoded.</p>
 <h3 id="get-requests"><a class="header" href="#get-requests">GET requests</a></h3>
 <p>In previous versions of hookshot, it would also handle the <code>GET</code> HTTP method. This was disabled due to concerns that it was too easy for the webhook to be
 inadvertently triggered by URL preview features in clients and servers. If you still need this functionality, you can enable it in the config.</p>
-<p>Hookshot will insert the full content of the body into a key under the Matrix event called <code>uk.half-shot.hookshot.webhook_data</code>, which may be useful if you have
+<p>Hookshot will insert the full content of the body into a key under the Matrix event called <code>gk.bridgeas.hookshot.webhook_data</code>, which may be useful if you have
 other integrations that would like to make use of the raw request body.</p>
 <section class="notice">
-Matrix does NOT support floating point values in JSON, so the <code>uk.half-shot.hookshot.webhook_data</code> field will automatically convert any float values
+Matrix does NOT support floating point values in JSON, so the <code>gk.bridgeas.hookshot.webhook_data</code> field will automatically convert any float values
 to a string representation of that value. This change is <strong>not applied</strong> to the JavaScript transformation <code>data</code>
 variable, so it will contain proper float values.
 </section>
@@ -239,7 +239,7 @@ in your room to prevent users from tampering with the script.
 you a very powerful ability to generate messages based on whatever input is coming in.</p>
 <p>The input is parsed and executed within a separate JavaScript Virtual Machine context, and is limited to an execution time of 2 seconds.
 With that said, the feature is disabled by default and <code>allowJsTransformationFunctions</code> must be enabled in the config.</p>
-<p>The code snippets can be edited by editing the Matrix state event corresponding to this connection (with a state type of <code>uk.half-shot.matrix-hookshot.generic.hook</code>).
+<p>The code snippets can be edited by editing the Matrix state event corresponding to this connection (with a state type of <code>gk.bridgeas.generic.hook</code>).
 Because this is a fairly advanced feature, this documentation won't go into how to edit state events from your client.
 Please seek out documentation from your client on how to achieve this.</p>
 <p>The script string should be set within the state event under the <code>transformationFunction</code> key.</p>
